--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ after_script:
   # Merges the individual clover reports of each component into a single clover.xml
   - php vendor/bin/phpcov.php --merge --clover build/logs/clover.xml --whitelist library build/coverage
   - php vendor/bin/coveralls
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
 
 notifications:
   irc: "irc.freenode.org#zftalk.dev"
